font size fix e horizontal scroll

--- a/20230307_horizontal_scroll_handmade/css/style.css
+++ b/20230307_horizontal_scroll_handmade/css/style.css
@@ -1,40 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 
 :root {
-    --bg-color: #ffffe0
+  --bg-color: #ffffe0;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 a {
-    cursor: none;
+  cursor: none;
 }
 
 body {
-    background-color: var(--bg-color);
-    overflow: hidden;
+  background-color: var(--bg-color);
+  overflow: hidden;
 }
 
 .title {
-    font-family: "Climate Crisis";
-    font-size: min(calc(100vw / 10), 4em);
-    margin: 4vh 5vw;
+  font-family: "Climate Crisis";
+  font-size: min(calc(100vw / 10), 4em);
+  margin: 4vh 5vw;
 }
 
 .subtitle {
-    font-family: "Inter";
-    font-weight: 400;
-    font-size: min(max(16px, calc(100vw/40)), 1.5em);
-    margin: -4vh 0 5vh 5vw;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: min(max(16px, calc(100vw / 40)), 1.5em);
+  margin: -4vh 0 5vh 5vw;
 }
 
 #scroller {
@@ -58,13 +60,13 @@ body {
 }
 
 #cursor {
-    position: absolute;
-    top:0;
-    left:0;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    color: #008b8b;
-    z-index: 100;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  color: #008b8b;
+  z-index: 100;
 }
